<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ta楼上</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="exit">退出</string>
    
    <string name="logo">logo</string>
    <string name="login">登    录</string>
    <string name="no_login">未登录</string>
    <string name="college">学校</string>
    <string name="go_select_college">点击选择</string>
    <string name="select_college">选择学校</string>
    <string name="input_college">请输入大学名称</string>
    <string name="input_studentid">学号</string>
    <string name="input_password">教务系统密码</string>
    <string name="captcha">验证码填这里</string>
    <string name="refresh_college_captcha">换一张</string>
    <string name="about_us">关于我们</string>
    <string name="server_declare">服务声明</string>
    
    <string name="complete_userdata">完善用户信息</string>
    <string name="userdata_base">基本资料：（完善信息，让更多的人认识你吧）</string>
    <string name="userdata_nickname">用户昵称:</string>
    <string name="nickname_hint">昵称不能超过八个字哦</string>
    <string name="signatrue_hint">写下属于你自己的签名</string>
    <string name="userdata_optional">可选资料：（仅由您选择性公开给任务接受者）</string>
    <string name="qq">QQ 号:</string>
    <string name="qq_hint">可输入您的企鹅号</string>
    <string name="email">Email:</string>
    <string name="email_hint">可输入您的伊妹儿</string>
    <string name="phone">Phone:</string>
    <string name="phone_hint">可输入您的爪机号</string>
    
    <string name="info">消息</string>
    <string name="task">任务</string>
    <string name="rank">排行</string>
    <string name="me">我</string>
    
    <string name="info_message">有人留言</string>
    <string name="info_signup">有人报名</string>
    <string name="info_signup_exec">选Ta执行</string>
    <string name="has_exec">已选Ta执行</string>
    <string name="task_expired">任务过期</string>
    <string name="task_end">任务完结</string>
    <string name="info_exec_task">选你执行</string>
    <string name="info_end_task">评价了你</string>
    
    <string name="write">发布任务</string>
    <string name="release">发  布</string>
    <string name="write_task_title">标  题（不超过14个字）</string>
    <string name="write_task_content">正  文（不超过140个字）</string>
    <string name="write_task_rewards">报  酬（不超过50个字）</string>
    <string name="common_write_rewards">常用报酬：</string>
    <string name="write_rewards_1">请吃饭</string>
    <string name="write_rewards_2">一起看电影</string>
    <string name="write_rewards_3">喝奶茶</string>
    <string name="write_rewards_4">楼上是美女的话你就抱回家吧！</string>
    <string name="write_rewards_5">和楼下搞基</string>
    <string name="write_rewards_6">你来定</string>
    <string name="write_endtime_hint">选个截止时间吧！</string>
    <string name="common_write_endtime">常用截止时间：</string>
    <string name="write_endtime_12">中午12点前</string>
    <string name="write_endtime_18">晚上6点前</string>
    <string name="write_endtime_21">晚上9点前</string>
    <string name="write_endtime_24">今天之前</string>
    <string name="write_endtime_day_1">一天后</string>
    <string name="write_endtime_day_3">三天后</string>
    <string name="write_endtime_day_10">十天后</string>
    <string name="write_endtime_month_1">一个月后</string>
    <string name="write_go">点击选择</string>
    <string name="select_endtime">选择截止时间</string>
    
    <string name="person_data">用户资料</string>
    <string name="person_data_hide">欧哦！！！这位童鞋没有公开实名信息。</string>
    <string name="person_data_setting">我也去设置</string>
    <string name="person_data_gosetting">（点击设置）</string>
    <string name="loading">正在加载....</string>
    <string name="private_letter">私信</string>
    <string name="send_private_letter">发私信</string>
    
    <string name="task_detail">任务详情</string>
    <string name="rewards">报酬  :</string>
    <string name="task_rewards">任务报酬  :</string>
    <string name="endtime">截止时间  :</string>
    <string name="signup_count">报名人数  :</string>
    <string name="signup">猛戳报名</string>
    <string name="message_count">留言  :</string>
    <string name="reply">回复</string>
    <string name="no_message">暂时还没有</string>
    <string name="say_a_little">说几句吧</string>
    <string name="post_message">发  表</string>
    <string name="default_exp">默认</string>
    
    <string name="end_task">完结任务</string>
    <string name="signup_list">报名列表</string>
    <string name="has_evaluate">已评价</string>
    <string name="evaluate">评价</string>
    <string name="detail">详情</string>
    <string name="evaluata_ta">您将要给Ta</string>
    <string name="evaluate_praise">个赞（最高32个赞）</string>
    <string name="signup_activity">报名</string>
    <string name="select_optional">选择提供给对方的联系方式，仅对方可见</string>
    <string name="no_optional">还未填写联系方式？</string>
    <string name="signup_setting">点击前去填写</string>
    <string name="private_message">顺便说几句悄悄话</string>
    
    <string name="praise">被赞:</string>
    <string name="my_rank">我的排名:</string>
    
    <string name="my_release_status">我发布的任务</string>
    <string name="my_signup_status">我报名的任务</string>
    <string name="drawable">头像:</string>
    <string name="nickname">昵称:</string>
    <string name="signature">个性签名:</string>
    <string name="setting">设置</string>
    <string name="version_feature">版本特性</string>
    <string name="feedback">用户反馈</string>
    <string name="change_user">切换用户</string>
    <string name="user_exit">退出登录</string>
    
    <string name="updata_userdata">更新用户资料</string>
    <string name="updata_userdata_real">实名资料设置</string>
    <string name="real_data">以下为你的实名资料：</string>
    <string name="real_data_permission">向所有人公开实名资料？</string>
    <string name="real_data_public">是</string>
    <string name="real_data_hide">否</string>
    <string name="real_data_declare">
        	注：1. 若设置实名资料为不公开，只有在三种情况下，实名资料才强制向对方公开。
        	分别是用户报名任务后，或有人报名你的任务且你选他执行，或对你任务的执行者给赞，
        	即在“有人报名”、“选我执行”、“评价了你”的消息详情页面点击头像可查看对方实名资料。
        	2. 若要修改设置，须按右上角打勾按钮提交到服务器。
    </string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
</resources>
