<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" 
	android:layout_height="wrap_content"
	android:orientation="vertical">
	<RelativeLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp">
	    <ImageView 
	        android:id="@+id/img_write_endtime"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerVertical="true"
			android:src="@drawable/task_endtime_50"
			android:contentDescription="@string/hello_world"/>
	    <TextView 
	        android:id="@+id/txt_write_display_endtime"
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_toRightOf="@id/img_write_endtime"
			android:layout_marginLeft="10dp"
			android:layout_centerVertical="true"
			android:padding="8dp"
			android:hint="@string/write_endtime_hint"
			android:textColorHint="@color/gray"
			android:textColor="@color/black"
			android:textSize="15sp"
			android:background="@drawable/common_txt_bg"/>
	    <Button 
	        android:id="@+id/btn_write_endtime"
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_marginRight="5dp"
	        android:paddingTop="7dp"
	        android:paddingBottom="7dp"
	        android:paddingLeft="12dp"
	        android:paddingRight="12dp"
	        android:text="@string/write_go"
	        android:textSize="15sp"
	        android:textColor="@color/white"
	        android:background="@drawable/login_bg_btn_captcha"/>
	</RelativeLayout>
	<LinearLayout 
	    android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_marginTop="5dp">
	    <TextView 
	        android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="5dp"
			android:text="@string/common_write_endtime"
			android:textColor="@color/black"
			android:textSize="15sp"
			android:clickable="true"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="3dp">
	    <TextView 
	        android:id="@+id/txt_write_12"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="3dp"
			android:text="@string/write_endtime_12"
			android:textColor="@color/gray"
			android:textSize="14sp"
			android:clickable="true"
			android:background="@drawable/hp_bg_fm_me_txt"/>
	    <TextView 
	        android:id="@+id/txt_write_18"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="5dp"
			android:gravity="center"
			android:padding="3dp"
			android:text="@string/write_endtime_18"
			android:textColor="@color/gray"
			android:textSize="14sp"
			android:clickable="true"
			android:background="@drawable/hp_bg_fm_me_txt"/>
	    <TextView 
	        android:id="@+id/txt_write_21"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="5dp"
			android:gravity="center"
			android:padding="3dp"
			android:text="@string/write_endtime_21"
			android:textColor="@color/gray"
			android:textSize="14sp"
			android:clickable="true"
			android:background="@drawable/hp_bg_fm_me_txt"/>
	    <TextView 
	        android:id="@+id/txt_write_24"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="5dp"
			android:gravity="center"
			android:padding="3dp"
			android:text="@string/write_endtime_24"
			android:textColor="@color/gray"
			android:textSize="14sp"
			android:clickable="true"
			android:background="@drawable/hp_bg_fm_me_txt"/>
	</LinearLayout>
	<LinearLayout 
	    android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:layout_marginTop="3dp">
	    <TextView 
	        android:id="@+id/txt_write_day_1"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:gravity="center"
			android:padding="3dp"
			android:text="@string/write_endtime_day_1"
			android:textColor="@color/gray"
			android:textSize="14sp"
			android:clickable="true"
			android:background="@drawable/hp_bg_fm_me_txt"/>
	    <TextView 
	        android:id="@+id/txt_write_day_3"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="5dp"
			android:gravity="center"
			android:padding="3dp"
			android:text="@string/write_endtime_day_3"
			android:textColor="@color/gray"
			android:textSize="14sp"
			android:clickable="true"
			android:background="@drawable/hp_bg_fm_me_txt"/>
	    <TextView 
	        android:id="@+id/txt_write_day_10"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="5dp"
			android:gravity="center"
			android:padding="3dp"
			android:text="@string/write_endtime_day_10"
			android:textColor="@color/gray"
			android:textSize="14sp"
			android:clickable="true"
			android:background="@drawable/hp_bg_fm_me_txt"/>
	    <TextView 
	        android:id="@+id/txt_write_month_1"
	        android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:layout_marginLeft="5dp"
			android:gravity="center"
			android:padding="3dp"
			android:text="@string/write_endtime_month_1"
			android:textColor="@color/gray"
			android:textSize="14sp"
			android:clickable="true"
			android:background="@drawable/hp_bg_fm_me_txt"/>
	</LinearLayout>
</LinearLayout>