<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/common_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_bg" >
        <Button
            android:id="@+id/btn_back_complete_userdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_back_bg" />
        <TextView 
            android:id="@+id/txt_complete_userdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/complete_userdata"
            android:textSize="19sp"
            android:textColor="@color/white"/>    
        <Button
            android:id="@+id/btn_ok_complete_userdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_ok_bg" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        
        <!-- 基本资料：昵称，个性签名，头像 -->
        <LinearLayout 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:layout_marginTop="20dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp">      
	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"           
	            android:text="@string/userdata_base"
	            android:textColor="@color/complete_textcolor" />
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:layout_marginTop="5dp"
	            android:background="@drawable/common_layout_bg">
		        <RelativeLayout 
		            android:layout_width="match_parent"
		        	android:layout_height="wrap_content">
		        	<ImageView
			            android:id="@+id/img_userphoto"
			            android:layout_width="80dp"
			            android:layout_height="80dp"		            
			            android:layout_marginRight="10dp"
			            android:layout_marginTop="10dp"
			            android:layout_alignParentRight="true"
			            android:background="@drawable/userphoto"
			            android:clickable="true"
			            android:contentDescription="@string/hello_world"/>
		            <LinearLayout 
		                android:layout_width="match_parent"
			        	android:layout_height="wrap_content"
			        	android:orientation="vertical"
			        	android:layout_marginLeft="10dp"
				        android:layout_marginRight="10dp"
				        android:layout_toLeftOf="@id/img_userphoto">
		                <LinearLayout 
		                    android:layout_width="match_parent"
				        	android:layout_height="wrap_content"
				        	android:orientation="horizontal"
				        	android:layout_marginTop="20dp">
		                    <TextView
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/userdata_nickname"
				                android:textColor="@color/black"
				                android:textSize="15sp" />
				            <EditText
				                android:id="@+id/edit_complete_userdata_nickname"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_marginLeft="10dp"
				                android:background="@null"
				                android:singleLine="true"
				                android:maxLength="8"
				                android:hint="@string/nickname_hint"
				                android:textSize="15sp" />
		                </LinearLayout>
		                <LinearLayout 
		                    android:layout_width="match_parent"
				        	android:layout_height="wrap_content"
				        	android:orientation="horizontal"
				        	android:layout_marginTop="20dp">
		                    <TextView
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:text="@string/signature"
				                android:textColor="@color/black"
				                android:textSize="15sp" />
				            <EditText
				                android:id="@+id/edit_complete_userdata_signatrue"
				                android:layout_width="wrap_content"
				                android:layout_height="wrap_content"
				                android:layout_marginLeft="10dp"
				                android:background="@null"
				                android:maxLines="3"
				                android:maxLength="30"
				                android:hint="@string/signatrue_hint"
				                android:textSize="15sp" />
		                </LinearLayout>
		            </LinearLayout>          
		        </RelativeLayout>
		        <ImageView 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="10dp"
				    android:src="@color/white"
				    android:contentDescription="@string/hello_world"/>	  
	        </LinearLayout>  
        </LinearLayout>
        
        <!-- 可选资料：qq号，email，手机号码 -->
        <LinearLayout 
            android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="vertical"
        	android:layout_marginTop="20dp"
        	android:layout_marginLeft="10dp"
        	android:layout_marginRight="10dp"> 
        	<TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"           
	            android:text="@string/userdata_optional"
	            android:textColor="@color/complete_textcolor" />
        	<LinearLayout 
        	    android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:orientation="vertical"
	        	android:layout_marginTop="5dp"
	        	android:background="@drawable/common_layout_bg">
        	    <LinearLayout 
        	        android:layout_width="match_parent"
		        	android:layout_height="wrap_content"
		        	android:orientation="horizontal"
		        	android:layout_marginTop="20dp"
		        	android:layout_marginLeft="10dp">
					<TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/qq"
		                android:textColor="@color/black"
		                android:textSize="15sp" />
		            <EditText
		                android:id="@+id/edit_complete_userdata_qq"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="15dp"
		                android:background="@null"
		                android:singleLine="true"
		                android:maxLength="12"
		                android:hint="@string/qq_hint"
		                android:textSize="15sp" 
		                android:inputType="number"/>
        	    </LinearLayout>
        	    <LinearLayout 
        	        android:layout_width="match_parent"
		        	android:layout_height="wrap_content"
		        	android:orientation="horizontal"
		        	android:layout_marginTop="20dp"
		        	android:layout_marginLeft="10dp">
        	        <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/email"
		                android:textColor="@color/black"
		                android:textSize="15sp" />
		            <EditText
		                android:id="@+id/edit_complete_userdata_email"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="15dp"
		                android:background="@null"
		                android:singleLine="true"
		                android:hint="@string/email_hint"
		                android:textSize="15sp" 
		                android:inputType="textEmailAddress"/>
        	    </LinearLayout>
        	    <LinearLayout 
        	        android:layout_width="match_parent"
		        	android:layout_height="wrap_content"
		        	android:orientation="horizontal"
		        	android:layout_marginTop="20dp"
		        	android:layout_marginLeft="10dp">
        	        <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="@string/phone"
		                android:textColor="@color/black"
		                android:textSize="15sp" />
		            <EditText
		                android:id="@+id/edit_complete_userdata_phone"
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="15dp"
		                android:background="@null"
		                android:singleLine="true"
		                android:maxLength="18"
		                android:hint="@string/phone_hint"
		                android:textSize="15sp" 
		                android:inputType="phone"/>
        	    </LinearLayout>
        	    <ImageView 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginTop="20dp"
				    android:src="@color/white"
				    android:contentDescription="@string/hello_world"/>
        	</LinearLayout>
        </LinearLayout>
              
    </LinearLayout>
   
</LinearLayout>
