<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/common_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_bg" >
        <Button
            android:id="@+id/btn_back_updata_userdata_optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_back_bg" />
        <TextView 
            android:id="@+id/txt_updata_userdata_optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/updata_userdata"
            android:textSize="20sp"
            android:textColor="@color/white"/>    
        <Button
            android:id="@+id/btn_ok_updata_userdata_optional"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_ok_bg" />
    </RelativeLayout> 
    
    <LinearLayout 
        android:layout_width="match_parent"
      	android:layout_height="wrap_content"
      	android:orientation="vertical"
      	android:layout_marginTop="20dp"
      	android:layout_marginLeft="15dp"
      	android:layout_marginRight="15dp">
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qq"
            android:textColor="@color/complete_textcolor"
            android:textSize="14sp"/>
       	<EditText
	        android:id="@+id/edit_updata_userdata_qq"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
	        android:background="@drawable/edit_47"
	        android:singleLine="true"
	        android:maxLength="12"
	        android:hint="@string/qq_hint"
	        android:textSize="15sp" 
	        android:inputType="number"/>
	</LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
      	android:layout_height="wrap_content"
      	android:orientation="vertical"
      	android:layout_marginTop="20dp"
      	android:layout_marginLeft="15dp"
      	android:layout_marginRight="15dp">
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/complete_textcolor"
            android:textSize="14sp"/>
       	<EditText
	        android:id="@+id/edit_updata_userdata_email"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
	        android:background="@drawable/edit_47"
	        android:singleLine="true"
	        android:hint="@string/email_hint"
	        android:textSize="15sp" 
	        android:inputType="textEmailAddress"/>
	</LinearLayout>
	<LinearLayout 
        android:layout_width="match_parent"
      	android:layout_height="wrap_content"
      	android:orientation="vertical"
      	android:layout_marginTop="20dp"
      	android:layout_marginLeft="15dp"
      	android:layout_marginRight="15dp">
		<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textColor="@color/complete_textcolor"
            android:textSize="14sp"/>
       	<EditText
	        android:id="@+id/edit_updata_userdata_phone"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp"
	        android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
	        android:background="@drawable/edit_47"
	        android:singleLine="true"
	        android:hint="@string/phone_hint"
	        android:textSize="15sp" 
	        android:inputType="phone"/>
	</LinearLayout>
</LinearLayout>
