<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/common_bg">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/actionbar_bg" >
        <Button
            android:id="@+id/btn_back_updata_userdata_real"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:background="@drawable/btn_back_bg" />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/updata_userdata_real"
            android:textSize="19sp"
            android:textColor="@color/white"/>    
        <Button
            android:id="@+id/btn_ok_updata_userdata_real_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_ok_bg" />
    </RelativeLayout> 
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="@string/real_data"
            android:textSize="15sp"
            android:textColor="@color/black"/> 
        <ListView 
	        android:id="@+id/list_updata_userdata_real"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:cacheColorHint="#00000000"
	        android:divider="@color/white_divider"
	        android:dividerHeight="1dp"
	        android:background="@drawable/common_list_bg">     
		</ListView>   
		<RelativeLayout 
		    android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
		    <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:paddingLeft="10dp"
	            android:text="@string/real_data_permission"
	            android:textSize="15sp"
	            android:textColor="@color/red"/> 
	        <RadioGroup 
	            android:id="@+id/rg_updata_userdata_real"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_centerVertical="true"
			    android:layout_alignParentRight="true"
			    android:orientation="horizontal">
	            <RadioButton 
			        android:id="@+id/btn_real_data_public"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:text="@string/real_data_public"
			        android:textColor="@color/blue"
			        android:textSize="14sp"/>
			    <RadioButton 
			        android:id="@+id/btn_real_data_hide"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_marginLeft="10dp"
			        android:text="@string/real_data_hide"
			        android:textColor="@color/blue"
			        android:textSize="14sp"/>
	        </RadioGroup>
		</RelativeLayout>
		<TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingLeft="10dp"
            android:text="@string/real_data_declare"
            android:textSize="15sp"
            android:textColor="@color/red"/> 
    </LinearLayout>
</LinearLayout>
