<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
  		android:layout_height="wrap_content"
  		android:layout_marginTop="20dp">
	<LinearLayout 
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
              <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/person_data_hide"
            android:textColor="@color/complete_textcolor"
            android:textSize="14sp"/>
              <LinearLayout 
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
               android:layout_marginTop="5dp"
               android:layout_marginLeft="10dp">
               <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/person_data_setting"
	            android:textColor="@color/complete_textcolor"
	            android:textSize="14sp"/>
               <TextView 
		        android:id="@+id/txt_person_data_setting"
		        android:layout_width="wrap_content" 
		        android:layout_height="wrap_content"
		        android:layout_marginLeft="10dp"
		        android:text="@string/person_data_gosetting"
		        android:textSize="14sp"
		        android:textColor="@color/blue"
		        android:clickable="true"
		        android:background="@drawable/login_bg_txt"/>
          	</LinearLayout>
          </LinearLayout>
    <ListView 
        android:id="@+id/list_person_data_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:divider="@color/white_divider"
        android:dividerHeight="1dp"
        android:background="@drawable/common_list_bg"
        android:visibility="gone">
	</ListView>
</FrameLayout>